src/objects/PerformanceTarget__c.object
<CustomObject>
    <description>Contains the definition for a performance target</description>
    <fields>
        <fullName>AggregationOperation__c</fullName>
        <description>Operator applied when tracked field is aggregated. Note CUSTOM is not an operator. It indicates that we do nothing with the ActualValue</description>
        <label>Aggregation Operation</label>
        <picklist>
            <picklistValues>
                <fullName>AVG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COUNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CUSTOM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PERCENTAGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUM</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DefaultValue__c</fullName>
        <description>Numeric value that holds the default value to apply to a Mobile User&apos;s target</description>
        <label>Default Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>The date when the current time period finishes and a new set of Assigned Targets should be created for the following one.</description>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JobTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For Job Targets, it has a link to the corresponding Job. For Performance Indicators, it is NULL.</description>
        <label>Job</label>
        <referenceTo>JobTemplate__c</referenceTo>
        <relationshipLabel>Performance Target</relationshipLabel>
        <relationshipName>Performance_Target</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>The date when the current period started for this target.</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Active means in use, closed means not in use</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CloseReason__c</fullName>
        <label>Close Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Automatically Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manually Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Timeframe__c</fullName>
        <description>The length of the lifetime of the target</description>
        <label>Timeframe</label>
        <picklist>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TrackedFieldApiName__c</fullName>
        <description>The API name of the field that the calculation is carried out on</description>
        <label>Tracked Field Api Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrackedSObjectApiName__c</fullName>
        <description>The API name of the SObject that the performance indicator is for</description>
        <externalId>true</externalId>
        <label>Tracked SObject Api Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrackedSObjectContactLookupFieldName__c</fullName>
        <description>The API name of the field of the tracked SObject where the lookup to the Contact is. It could be a indirect relationship</description>
        <label>Tracked SObject Contact Lookup Field Nam</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The type of performance target</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Job_Target</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Performance_Indicator</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Performance Target</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Performance Target Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01Ii0000000nfz1EAA_00Ni0000009oZZDEA2</fullName>
        <active>true</active>
        <field>SObjectFilterCondition__c.PerformanceTarget__c</field>
        <filterItems>
            <field>PerformanceTarget__c.Type__c</field>
            <operation>equals</operation>
            <value>Performance_Indicator</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>SObject Filter Condition_Performance Tar</name>
    </namedFilters>
    <pluralLabel>Performance Target</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>JobCannotBeEmpty</fullName>
        <active>true</active>
        <description>Job template related to a performance target cannot be empty when inserting or updating</description>
        <errorConditionFormula>AND(ISPICKVAL(Type__c, &apos;Job_Target&apos;), JobTemplate__c = &apos;&apos; || JobTemplate__c = NULL)</errorConditionFormula>
        <errorMessage>Cannot save a Job target without a job related</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NameCannotBeEmpty</fullName>
        <active>true</active>
        <description>Name of performance targets cannot be empty when inserting or updating</description>
        <errorConditionFormula>Name  = &apos;&apos; || Name = NULL</errorConditionFormula>
        <errorMessage>Name of Performance target cannot be empty</errorMessage>
    </validationRules>
    <validationRules>
         <fullName>UniqueNames</fullName>
         <active>false</active>
         <description>Validation deprecated. Please feel free to deactivate</description>
         <errorConditionFormula>false</errorConditionFormula>
         <errorMessage>Names of Performance targets must be unique</errorMessage>
     </validationRules>
</CustomObject>